--- a/mvp.css
+++ b/mvp.css
@@ -523,3 +523,8 @@ blockquote footer {
 	background-color:rgb(202, 202, 232);
 	border-radius: 10px;
 }
+
+.prompt {
+    width: 250px;
+    height: auto;
+}
